--- a/.github/workflows/fetchRss.yml
+++ b/.github/workflows/fetchRss.yml
@@ -16,7 +16,20 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Install Cloudflare Warp
+      run: |
+        curl https://pkg.cloudflareclient.com/pubkey.gpg | sudo gpg --dearmor -o /usr/share/keyrings/cloudflare-warp-archive-keyring.gpg
+        echo "deb [arch=amd64 signed-by=/usr/share/keyrings/cloudflare-warp-archive-keyring.gpg] https://pkg.cloudflareclient.com/ $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/cloudflare-client.list
+        sudo apt update -y
+        sudo apt install -y cloudflare-warp
+        warp-cli --accept-tos register
+        warp-cli --accept-tos set-mode proxy
+        warp-cli --accept-tos set-proxy-port 50000
+        warp-cli --accept-tos connect
+        warp-cli --accept-tos enable-always-on
+        
     - name: 檢出代碼
+      if: success() && steps.install-warp.outcome == 'success'
       uses: actions/checkout@v4
 
     - name: 設置 Python 環境
