--- a/.github/workflows/fetchRss.yml
+++ b/.github/workflows/fetchRss.yml
@@ -27,9 +27,9 @@ jobs:
         echo "deb [arch=amd64 signed-by=/usr/share/keyrings/cloudflare-warp-archive-keyring.gpg] https://pkg.cloudflareclient.com/ $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/cloudflare-client.list
         sudo apt update -y
         sudo apt install -y cloudflare-warp
-        warp-cli --accept-tos register
-        warp-cli --accept-tos set-mode proxy
-        warp-cli --accept-tos set-proxy-port 50000
+        warp-cli --accept-tos registration new
+        warp-cli --accept-tos mode proxy
+        warp-cli --accept-tos proxy port 50000
         warp-cli --accept-tos connect
 
     - name: 設置 Python 環境
