--- a/.github/workflows/fetchRss.yml
+++ b/.github/workflows/fetchRss.yml
@@ -73,7 +73,19 @@ jobs:
       run: |
         # 將版本號加 1
         NEW_VERSION=$(echo ${{ steps.set_initial_version.outputs.version }} | awk -F'.' -v OFS='.' '{$NF+=1; print}')
-        git tag v$NEW_VERSION
-        git push origin v$NEW_VERSION
+        
+        # 檢查是否存在兩個 v 前綴
+        if [[ "$NEW_VERSION" == v* && "$NEW_VERSION" == v* ]]; then
+          # 刪除一個 v 前綴
+          NEW_VERSION=$(echo "$NEW_VERSION" | sed 's/^v//')
+        fi
+        
+        # 檢查標籤是否已經存在
+        if git show-ref --tags --verify --quiet "refs/tags/$NEW_VERSION"; then
+          echo "標籤 $NEW_VERSION 已經存在,跳過推送"
+        else
+          git tag $NEW_VERSION
+          git push origin $NEW_VERSION
+        fi
       # env:
         # GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
