--- a/.github/workflows/fetchRss.yml
+++ b/.github/workflows/fetchRss.yml
@@ -12,9 +12,9 @@ on:
   schedule:
     - cron: '*/5 * * * *'  # 每隔 5 分鐘運行一次
 
-concurrency: 
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
+# concurrency: 
+  # group: ${{ github.workflow }}-${{ github.ref }}
+  # cancel-in-progress: true
 
 jobs:
   deploy:
