--- a/.github/workflows/fetchRss.yml
+++ b/.github/workflows/fetchRss.yml
@@ -43,7 +43,7 @@ jobs:
 
     - name: 安裝依賴
       run: |
-        python -m pip install --upgrade pip niquests niquests[speedups] niquests[socks] qh3 feedgen bs4 tqdm 
+        python -m pip install --upgrade pip niquests niquests[speedups] niquests[socks] qh3 feedgen bs4 tqdm aiofiles 
 
     - name: 執行 Python 腳本
       run: |
