--- a/.github/workflows/fetchRss.yml
+++ b/.github/workflows/fetchRss.yml
@@ -27,6 +27,7 @@ jobs:
     - name: Install Cloudflare Warp
       run: |
         git pull
+        curl -v https://1.1.1.1/cdn-cgi/trace
         curl https://pkg.cloudflareclient.com/pubkey.gpg | sudo gpg --dearmor -o /usr/share/keyrings/cloudflare-warp-archive-keyring.gpg
         echo "deb [arch=amd64 signed-by=/usr/share/keyrings/cloudflare-warp-archive-keyring.gpg] https://pkg.cloudflareclient.com/ $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/cloudflare-client.list
         sudo apt update -y
@@ -35,6 +36,7 @@ jobs:
         warp-cli --accept-tos mode proxy
         warp-cli --accept-tos proxy port 50000
         warp-cli --accept-tos connect
+        curl -v https://1.1.1.1/cdn-cgi/trace
 
     - name: 設置 Python 環境
       uses: actions/setup-python@v5
