--- a/.github/workflows/fetchRss.yml
+++ b/.github/workflows/fetchRss.yml
@@ -36,7 +36,7 @@ jobs:
         warp-cli --accept-tos mode proxy
         warp-cli --accept-tos proxy port 50000
         warp-cli --accept-tos connect
-        curl -v https://1.1.1.1/cdn-cgi/trace
+        curl -v https://1.1.1.1/cdn-cgi/trace -x socks5h://localhost:50000
 
     - name: 設置 Python 環境
       uses: actions/setup-python@v5
