--- a/.github/workflows/fetchRss.yml
+++ b/.github/workflows/fetchRss.yml
@@ -40,7 +40,7 @@ jobs:
     - name: 安裝依賴
       run: |
         sudo apt install python3 python3-pip -y
-        python3 -m pip install --upgrade pip niquests niquests[speedups] niquests[socks] qh3 feedgen bs4 tqdm aiofiles urllib3
+        python3 -m pip install --upgrade pip niquests niquests[speedups] niquests[socks] qh3 feedgen bs4 tqdm aiofiles urllib3.future
 
     - name: 執行 Python 腳本
       run: |
