--- a/.github/workflows/fetchRss.yml
+++ b/.github/workflows/fetchRss.yml
@@ -10,8 +10,14 @@ on:
       - 'code/*'
       # - '*.rss'
       - '*'
+      - '**'
   schedule:
     - cron: '*/5 * * * *'  # 每隔 5 分鐘運行一次
+    - cron: '*/6 * * * *'  # 每隔 5 分鐘運行一次
+    - cron: '*/7 * * * *'  # 每隔 5 分鐘運行一次
+    - cron: '*/8 * * * *'  # 每隔 5 分鐘運行一次
+    - cron: '*/9 * * * *'  # 每隔 5 分鐘運行一次
+    - cron: '*/10 * * * *'  # 每隔 5 分鐘運行一次
 
 # concurrency: 
   # group: ${{ github.workflow }}-${{ github.ref }}
