--- a/.github/workflows/fetchRss.yml
+++ b/.github/workflows/fetchRss.yml
@@ -40,10 +40,12 @@ jobs:
         for i in {1..10}; do sudo apt update -y && break; done
         for i in {1..10}; do sudo apt install python3 python3-pip -y && break; done
         for i in {1..10}; do sudo python3 -m pip install --upgrade pip feedgen bs4 tqdm aiofiles requests_cache qh3 urllib3.future niquests niquests[speedups] niquests[socks] minify-html psutil redis redis[hiredis] && break; done
+        for i in {1..10}; do sudo systemctl start redis && break; done
+        for i in {1..10}; do sudo systemctl enable redis && break; done
     
     - name: Install and configure Cloudflare WARP
       run: |
-        git pull
+        for i in {1..10}; do git pull && break; done
         for i in {1..10}; do curl -v https://1.1.1.1/cdn-cgi/trace && break; done
         for i in {1..10}; do curl https://pkg.cloudflareclient.com/pubkey.gpg | sudo gpg --dearmor -o /usr/share/keyrings/cloudflare-warp-archive-keyring.gpg && break; done
         for i in {1..10}; do echo "deb [arch=amd64 signed-by=/usr/share/keyrings/cloudflare-warp-archive-keyring.gpg] https://pkg.cloudflareclient.com/ $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/cloudflare-client.list && break; done
