--- a/.github/workflows/fetchRss.yml
+++ b/.github/workflows/fetchRss.yml
@@ -35,16 +35,6 @@ jobs:
       # run: |
         # for i in {1..10}; do docker run -d -p 8080:80 --shm-size=1gb --name=weserv ghcr.io/weserv/images:5.x && break; done
 
-    - name: 安裝依賴
-      run: |
-        for i in {1..10}; do sudo apt update -y && break; done
-        for i in {1..10}; do sudo apt install python3 python3-pip -y && break; done
-        for i in {1..10}; do sudo python3 -m pip install --upgrade pip feedgen bs4 tqdm aiofiles requests_cache qh3 urllib3.future niquests niquests[speedups] niquests[socks] minify-html psutil redis redis[hiredis] && break; done
-        for i in {1..10}; do sudo systemctl status redis && break; done
-        for i in {1..10}; do sudo systemctl enable redis && break; done
-        for i in {1..10}; do sudo systemctl start redis && break; done
-        for i in {1..10}; do sudo systemctl status redis && break; done
-    
     - name: Install and configure Cloudflare WARP
       run: |
         for i in {1..10}; do git pull && break; done
@@ -59,6 +49,16 @@ jobs:
         for i in {1..10}; do warp-cli --accept-tos tunnel host add localhost && break; done
         for i in {1..10}; do warp-cli --accept-tos connect && break; done
         for i in {1..10}; do curl -v https://1.1.1.1/cdn-cgi/trace && break; done
+
+    - name: 安裝依賴
+      run: |
+        for i in {1..10}; do sudo apt update -y && break; done
+        for i in {1..10}; do sudo apt install python3 python3-pip redis-server -y && break; done
+        for i in {1..10}; do sudo python3 -m pip install --upgrade pip feedgen bs4 tqdm aiofiles requests_cache qh3 urllib3.future niquests niquests[speedups] niquests[socks] minify-html psutil redis redis[hiredis] && break; done
+        for i in {1..10}; do sudo systemctl status redis && break; done
+        for i in {1..10}; do sudo systemctl enable redis && break; done
+        for i in {1..10}; do sudo systemctl start redis && break; done
+        for i in {1..10}; do sudo systemctl status redis && break; done
 
     - name: 執行 Python 腳本
       run: |
