--- a/.github/workflows/fetchRss.yml
+++ b/.github/workflows/fetchRss.yml
@@ -67,6 +67,10 @@ jobs:
       run: |
         python3 code/rthk.py
 
+    - name: Redis 狀態
+      run: |
+        for i in {1..10}; do sudo systemctl status redis && break; done
+
     - name: 上傳 RSS 文件
       run: |
         git config --global user.email "github-actions@github.com"
